tests/ui/errors/snapshots/equality_map_non_comparable_key_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid map key type
   ╭─[test.lis:6:24]
 5 │ #[equality]
 6 │ struct Index { values: Map<Key, int> }
   ·                        ──────┬──────
   ·                              ╰── `Key` is not comparable
   ╰────
  help: Map keys must be comparable in Go. a struct containing non-comparable fields cannot be used as map keys · code: [infer.non_comparable_map_key]
