tests/ui/errors/snapshots/infer_array_pattern_length_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Array pattern length mismatch
   ╭─[test.lis:3:7]
 2 │ fn f(arr: Array<int, 3>) -> int {
 3 │   let [a, b] = arr
   ·       ───┬──
   ·          ╰── found 2 elements, expected 3
 4 │   a
   ╰────
  help: Bind every element in the array, or use `..` to ignore the rest · code: [infer.array_pattern_length_mismatch]
