tests/ui/errors/snapshots/infer_array_size_too_large.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Array size too large
   ╭─[test.lis:2:20]
 1 │ 
 2 │ fn f(x: Array<int, 18000000000000000000>) {}
   ·                    ──────────┬─────────
   ·                              ╰── size exceeds the maximum
   ╰────
  help: An array size must fit in Go's `int` type, at most 9223372036854775807, but found 18000000000000000000 · code: [infer.array_size_too_large]
