tests/ui/errors/snapshots/infer_enum_type_alias_used_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot use a module or enum-type alias as a value
   ╭─[main.lis:7:15]
 6 │   let c = utils.Color
 7 │   fmt.Println(c)
   ·               ┬
   ·               ╰── this alias refers to a type or module, not a runtime value
 8 │ }
   ╰────
  help: Access a member instead, e.g. `alias.VariantName` · code: [infer.namespace_alias_used_as_value]
