tests/ui/errors/snapshots/infer_invalid_cast_bool_to_int.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid cast
   ╭─[test.lis:3:3]
 2 │ fn test() -> int {
 3 │   true as int
   ·   ─────┬─────
   ·        ╰── cannot cast `bool` to `int`
 4 │ }
   ╰────
  help: Casts are supported between: numeric types, byte/rune to string, string to byte/rune slices, byte to rune, and concrete types to interfaces · code: [infer.invalid_cast]
